--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
+* linguist-vendored
 doc/* linguist-documentation
-demo_appi/data/* linguist-vendored
-*.txt linguist-vendored
-*.v linguist-language=Verilog
+*.c linguist-vendored=false
