--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,3 @@
-*     linguist-vendored
-*.c   linguist-vendored=false
-*.v   linguist-vendored=false
-*.sh   linguist-vendored=false
 doc/* linguist-documentation
+*.txt linguist-vendored
+*.v   linguist-vendored=Verilog
